<resources>
    <string name="NameApp">Android-Forum</string>
    <string name="NameSettings">Settings</string>
    <string name="NameRules">Rules</string>
    <string name="NameFailed">Failed</string>
    <string name="MenuSettings">Settings</string>
    <string name="MenuExit">Stop loading</string>
    <string name="MenuReload">Reload</string>
    <string name="WarningAlertMessage">No internet connection</string>
    <string name="WarningAlertTitle">Error!</string>
    <string name="WarningAlertSettingsTitle">Warning!</string>
    <string name="Ok">OK</string>
    <string name="FirstRunMainTitle">First run</string>
    <string name="FirstRunMainMessage">Please take a quick look at out rules!</string>
    <string name="FirstRunHelpMessage">If you get any error, or something like that, please write an e-mail: zokni1996@gmail.com</string>
    <string name="FirstRunHelpTitle">Feedback!</string>
    <string name="WarningAlertLoadErrorMessage">Failed load the site, please try again</string>
    <string name="SureExitTitle">Are you sure you want to quit?</string>
    <string name="AboutMe">About</string>
    <string name="WebViewScreen">Web settings</string>
    <string name="ZoomWithHand">Zoom</string>
    <string name="ZoomButtonSee">Zoom button</string>
    <string name="ScreenSettings">Application</string>
    <string name="TextSize">Text size</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Notification">Get notifications</string>
    <string name="Refresh">Refresh</string>
    <string name="ZoomSummary">It\'s good, if you want zoom, with your fingers</string>
    <string name="ZoomButtonSummary">Display the zooming buttons</string>
    <string name="ScreenSummary">If you would like to keep the screen on</string>
    <string name="Screen">Keep screen on</string>
    <string name="NotificationSettings">Notification</string>
    <string name="NotificationNameSettings">New post</string>
    <string name="NotificationSummary">Get notification, if there is new post.</string>
    <string name="AboutMe1">This application developed by zokni1996. If you have got any question, please contact with him.\n\nThe application developing not easy, especially that I am the only, who develop this. I\'m a student, so I have to study a lot, that\'s why the releases will take longer time. If you would like to help to develop, please write me an e-mail: zokni1996@gmail.com. \n\nIf you use this app please make a donate with a \'THANKS\'! :) \n </string>
    <string name="AboutMe2">I NEED SOME PEOPLE!</string>
    <string name="AboutMe3">\nI need a person, who will translate the application text other LANGUAGES! If you would like to help, please write an e-mail (above the link) \n</string>
    <string name="AboutMe4">Thanks, to read this, and use my application! :)</string>
    <string name="AboutMe5">Papi54 - The testing (it\'s very important)\nhunterzsolt - The suggestions\nszornyu - The plus information</string>
    <string name="AboutMe6">Please leave questions, bug reports, or comments on the forum!\n</string>
    <string name="AboutMe7">Home page: http://android-forum.hu/</string>
    <string name="AboutMe8"><![CDATA[Forum: http://android-forum.hu/viewtopic.php?f=43&t=917]]></string>
    <string name="AboutMe9">E-mail: zokni1996@gmail.com</string>
    <string name="ToastRefreshTheApplication">Refresh the site, to enable the settings!</string>
    <string name="ToastRestartTheApplication">Restart the application to disable the icon!</string>
    <string name="NotificationContentTitle">New post!</string>
    <string name="NotificationContentText">Tap here, to open the app! :)</string>
    <string name="Theme">Theme</string>
    <string name="Priority">Priority</string>
    <string name="Vibrate">Vibrate</string>
    <string name="VibrateSummary">If you want to vibrate your phone</string>
    <string name="Led">LED</string>
    <string name="LedSummary">The LED will light</string>
    <string name="Sound">Sound</string>
    <string name="SoundSummary">Get sound notification</string>
    <string name="About">About…</string>
    <string name="ThanksTo">Thanks to</string>
    <string name="Support">Support</string>
    <string name="Other">Other</string>
    <string name="OpenInBrowser">Open in the browser</string>
    <string name="OpenInBrowserSummary">The main page will load in the browser</string>
    <string name="Version">Build version</string>
    <string name="VersionSummary">Version: 2.1.5</string>
    <string name="Copyright">Copyright</string>
    <string name="LOGFailedMakeNotification">Failed the date compare:</string>
    <string name="TheLatestPostsTitle">The latest posts:</string>
    <string name="Language">Language</string>
    <string name="ChangeLog">Change Log</string>
    <string name="Extras">Extras</string>
    <string name="SettingsExtrasSummaryFirstOne">•Introducing\n•Starting little otherwise</string>
    <string name="SettingsExtrasSummaryFirstTwo">•Android 4.3 news\n•Android Studio\n•Android 4.X news\n•Transition Framework</string>
    <string name="SettingsExtrasSummarySecondOne">•Android Design Guideline\n•New UI components\n•UI useful tools</string>
    <string name="SettingsExtrasSummarySecondTwo">•Public example\n•Android 4.4 news</string>
    <string name="SettingsExtrasSummaryThirdOne">•Introducing network communication\n•Useful solutions\n•Cloud services\n•PaaS example - OpenShift</string>
    <string name="SettingsExtrasSummaryThirdTwo">•BaaS example - Parse\n•Summary</string>
    <string name="SettingsExtrasSummaryFourthOne">•SOLID principles in Android</string>
    <string name="SettingsExtrasSummaryFourthTwo">•Test Driven Development principles\n•What kind of tools can you use when you develop?\n•What kind of modules worth to debug?\n•How to make a good debugging code?\n•Explore mistakes easily\n•Develop user UI</string>
    <string name="SettingsExtrasSummaryFifthOne">•Game develop in Android 1.</string>
    <string name="SettingsExtrasSummaryFifthTwo">•Game develop in Android 2.</string>
    <string name="SettingsExtrasSummarySixthOne">•Different ways to port\n•Cross-platform solutions</string>
    <string name="SettingsExtrasSummarySixthTwo">Summary</string>
    <string name="SettingsExtrasSummarySeventhOne">•Code decryption and obfuscating</string>
    <string name="SettingsExtrasSummarySeventhTwo">•Performance tips\n•Checking performance\n•The web browser ability between device data\n•Android scripting layer</string>
    <string name="DemoVideos">Application developing videos</string>
    <string name="Home">Main Page</string>
    <string name="Rules1">Tilos a Warez! Tehát linkelni, vagy utalni rá hogy hol található meg az anyag illegálisan! Ide tartozik a népszerű IGO program is, mely nem megvásárolható, így csak a gyárilag azzal eladott telefonon legális. Így a más telefonokkal kapcsolatos kérdéseket sajnos moderálnunk kell.\n\nTilos a függetlenítéshez ötleteket, konkrét leírásokat megadni, amennyiben azok illegálisan hajthatóak végre! Szolgáltatói, gyártói függetlenítéshez segítséget lehet adni.\n</string>
    <string name="Rules2">BTK 300 §/C szerint törvénybe ütközik, hiszen vétséget követ el,aki adat bevitelével, továbbításával, megváltoztatásával, törlésével, illetőleg egyéb művelet végzésével a számítástechnikai rendszer működését jogosulatlanul akadályozza, így két évig terjedő szabadságvesztéssel, közmunkával vagy pénzbírsággal büntethető. Ha pedig haszonszerzés céljából teszi mindezt, akkor kárt okoz, bűntettet követ el és három évig terjedő szabadságvesztéssel büntetendő — jelentős kár esetén ez öt, különösen nagy kárnál nyolc, különösen jelentős kár esetén pedig tíz évre módosulhat.</string>
    <string name="Rules3">\nTilos a Dupla regisztráció! Amennyiben ilyesmire derül fény, úgy törlésre kerül az egyik, vagy mindkettő.\n\nHozzászólásaidat bármikor szerkesztheted, így a témanyitásnál mindig frissen tarthatod az első hozzászólásodat!\n\nHasználd a [kep] [/kep] tag-et képek beszúrására! Automatikusan átméretezi ha túl nagy képet szeretnél berakni!\n</string>
    <string name="Rules4">Csak olyan dolgot ossz meg a közösséggel, melyben biztos vagy hogy működik, ellenkező esetben kötelező feltüntetni hogy nem tesztelt!</string>
    <string name="Rules5">A LETÖLTÉS/TELEPÍTÉS CSAK A SAJÁT FELELŐSSÉGED! A MŰVELET GARANCIA VESZTÉSSEL JÁRHAT! AZ OLDAL/FELTÖLTŐ NEM VÁLLAL KOCKÁZATOT KÁROKÉRT!</string>
    <string name="Rules6">\nDirekt hirdetés/reklám tilos az oldalon!\n</string>
    <string name="Rules7">Tilos az oldalról leírásokat 1–1-ben lemásolni és megjeleníteni máshol. Egyéb átírt leírás csakis jól látható forrásmegjelöléssel tehető közzé. Ellenkező esetben megtesszük a szükséges lépéseket.</string>
    <string name="Rules8">\nROM-oknál, telefonos MOD-oknál, használd a következő előtagokat a témák címében: [ROM] [MOD]\n</string>
    <string name="YouTubePlayLists">Youtube play lists</string>
    <string name="AndroidUpdate">Android Update</string>
    <string name="AndroidAppTraining">Android app! training</string>
    <string name="Style">Style</string>
    <string name="Facebook">Facebook</string>
    <string name="GooglePlus">Google Plus</string>
    <string name="Feed">Follow us!</string>
    <string name="ParseLogIn">Login</string>
    <string name="ParseSettingsNotificationName">Maintenance</string>
    <string name="ParseSettingsNotificationPreferenceTitle">Send notification</string>
    <string name="ParseSwitchTitle">News, information</string>
    <string name="ParseSwitchMaintenanceTitle">Maintenance channel</string>
    <string name="ParseSwitchMaintenanceSummary">Only moderators, and administrators can use</string>
    <string name="SendNotification">Send!</string>
    <string name="SendToNotification">Who do you want to send:</string>
    <string name="MessageNotification">Message</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="ExitTitle">Confirm exit</string>
    <string name="ExitMessage">Before you quit the application, you have to confirm it</string>
    <string name="Save">Save</string>
    <string name="FavouriteHint">HTC M8 ROOT</string>
    <string name="Name">Name:</string>
    <string name="OnlyLast">Only the last</string>
    <string name="OnlyLastSummer">Show the last topic, from the new posts</string>
    <string name="application_version">Failed to get application version</string>
    <string name="ScreenSummarySettings">Application, and the WebView settings</string>
    <string name="NotificationSettingsSummary">Get notification from the server, and from the new posts</string>
    <string name="NameRulesSummary">ALWAYS KEEP IT!</string>
    <string name="AboutMeSummary">Information from the app, and from the developer(s)</string>
    <string name="ExtrasSummary">Links to the YouTube. There are a lot of videos to study develop for Android</string>
    <string name="ParseSettingsNotificationNameSummary">Only moderators and administrators can use!</string>
</resources>