<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/WebViewScreen">
        <SwitchPreference
            android:key="Zoom"
            android:summary="@string/ZoomSummary"
            android:title="@string/ZoomWithHand" />
        <CheckBoxPreference
            android:dependency="Zoom"
            android:key="ZoomButton"
            android:summary="@string/ZoomButtonSummary"
            android:title="@string/ZoomButtonSee"/>
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/Zoom"
            android:entryValues="@array/ZoomNumbers"
            android:key="BasicZoom"
            android:summary="%s"
            android:title="@string/TextSize" />

    </PreferenceCategory>
</PreferenceScreen>