<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hu.zokni1996.android_forum.ParseNotification">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp">

        <EditText
            android:layout_width="fill_parent"
            android:hint="@string/MessageNotification"
            android:layout_height="wrap_content"
            android:id="@+id/ParseNotificationMessage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SendToNotification"/>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ParseNotificationChannel" />
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/SendNotification"
        android:enabled="false"
        android:id="@+id/ParseSendNotification"
        style="@style/ButtonStyleRounded"/>
</LinearLayout>
