<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal|center_vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/Username"
            android:id="@+id/ParseUsername"
            android:drawableStart="@drawable/ic_action_action_account_circle"
            android:drawableLeft="@drawable/ic_action_action_account_circle"
            android:drawablePadding="8dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/Password"
            android:id="@+id/ParsePassword"
            android:drawableStart="@drawable/ic_action_communication_vpn_key"
            android:drawableLeft="@drawable/ic_action_communication_vpn_key"
            android:drawablePadding="8dp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ParseLogIn"
        android:id="@+id/ParseLoginButton"
        style="@style/ButtonStyleRounded" />

</LinearLayout>