<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal|center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="6dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="6dp">

        <TextView
            android:id="@+id/textViewHttpAuthRequestTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ez a " />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Username" />

        <EditText
            android:id="@+id/editTextHttpAuthRequestUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_account_circle"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_action_account_circle"
            android:hint="@string/Username" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password" />

        <EditText
            android:id="@+id/editTextHttpAuthRequestPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_communication_vpn_key"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_communication_vpn_key"
            android:hint="@string/Password"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonHttpAuthRequest"
        style="@style/ButtonStyleRounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ParseLogIn" />
</LinearLayout>